--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,6 +14,6 @@
         <link rel="shortcut icon" href="/resources/favicon.ico" />
     </head>
     <body>
-        <div id="main">Naveen Poojary</div>
+        <div id="main"></div>
     </body>
 </html>
