--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,5 +15,9 @@
     </head>
     <body>
         <div id="main">Naveen Poojary</div>
+        <div id="main">Naveen Poojary</div>
+        <div id="main">Naveen Poojary</div>
+
+
     </body>
 </html>
